<resources>
    <string name="app_name">todo-tracker </string>
    <string name="add_task">Add Task</string>
    <string name="see_task">See All Task</string>
    <string name="hello">Hello</string>
    <string name="all_tasks">All tasks</string>
    <string name="add_task_msg">Fill the details below to add a task into your TODO</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="task_date">Task date</string>
    <string name="add_an_event">Add an event</string>
    <string name="completed">COMPLETED</string>
    <string name="task_time">Task time</string>
    <string name="validation">please fill the all required field</string>
    <string name="data_saved">Saved the Data in Database</string>

</resources>