<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.ItemAddFragment">

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:text="Add a task"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20ssp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_50sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:alpha="0.8"
                android:text="@string/add_task_msg"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/task_title"
                tools:ignore="MissingPrefix" />

            <EditText
                android:inputType="text"
                android:id="@+id/addTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/btn_border"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/task_description"
                tools:ignore="MissingPrefix" />

            <EditText
                android:inputType="text"
                android:id="@+id/addTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/btn_border"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/task_date"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/taskDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/btn_border"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Task time"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/taskTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/btn_border"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13ssp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/add_an_event"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/taskEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/btn_border"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13ssp"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/addTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/btn_background"
                android:text="@string/add_task"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>